# HaskHell

./: .gitignore  CHANGELOG.md  HaskHell.cabal  LICENSE  README.md  haskhell.cabal  package.yaml  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.1/: HaskHell-0.1.0.0-inplace.conf  package.cache
src/: Colors.hs  Enemy.hs  Game.hs  Menu.hs  Player.hs  Rendering.hs  Types.hs
test/: Main.hs
