cabal-version:      3.0
name:               HaskHell
version:            0.1.0.0
homepage:           https://github.com/tordjoha/HaskHell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tord Johansson
maintainer:         tordjoha1@gmail.com
copyright:          (c) 2025 Tord Johansson
category:           Game
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Game
    other-modules:  Enemy
                    Colors
                    Types
                    Menu
                    Player
                    Rendering
    
    build-depends:    base ^>=4.19.0.0,
                      gloss,
                      --gloss-juicy,
                      mtl,
                      containers,
    hs-source-dirs:   src
    default-language: GHC2021

executable HaskHell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        HaskHell,
        gloss,
        mtl,

    hs-source-dirs:   app
    default-language: GHC2021

test-suite HaskHell-test
    import:           warnings
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        HaskHell
